--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@100xdevs/common": "^1.0.2",
+    "@shawakash/common2": "^1.0.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
