--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@100xdevs/common": "^1.0.2",
+    "@prisma/client": "^5.2.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -20,5 +21,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.2.0"
   }
 }
